# semester-project-team-9

./: Cargo.toml  README.md
Testing/UnitTesting/testcase/: element.py  locator.py  main.py  page.py
app/: .env  Cargo.toml  database.sql  docker-compose.yml
app/src/: auth.rs  config.rs  handlers.rs  main.rs  models.rs  postgres.rs  routes.rs
app/templates/: hello.html
documentation/Unused A3's/: A3 Form Health and Nutrition Web App by Joshua Corretjer.docx  Initial A3 Form Juan Velazquez.odt  Victor_Laureano_A3.pptx  readme
frontend/: .env
frontend/client/: package.json
frontend/client/public/: index.html
frontend/client/src/: App.css  App.js  App.jsx  App.test.js  index.css
frontend/client/src/Services/: Http.js  getServices.js  getUsers.js  userService.js
frontend/client/src/components/: Login.css  Login.jsx  Select-subscription-btn.jsx  Sidebar.css  Sidebar.js  Sidebardata.js  Signup.css  Signup.jsx  top-navbar.css  top-navbar.jsx
frontend/client/src/config/: config.js
frontend/client/src/context/: userContext.js
frontend/client/src/hooks/: useLoggedUser.js  useService.js  userAuth.js
frontend/client/src/scenes/Calendar/: index.js
frontend/client/src/scenes/Home/: index.js
frontend/client/src/scenes/Login/: Login.jsx  Signup.jsx  top-navbar.css  top-navbar.jsx
frontend/client/src/scenes/MainMenu/: index.js
frontend/client/src/scenes/Profile/: index.js
frontend/client/src/scenes/Select/: index.js
frontend/client/src/tabs/: Entertainment.js  Sports.js
testing/: LoginTest.py  RegisterTest.py
(+6 files in other folders)
