[package]
name = "web-server"
version = "0.1.0"
authors = ["FrancisPatron <Francis.patron1@upr.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.1.1"
serde = { version = "1.0",features = ["derive"]}
dotenv = "0.15.0"
config = "0.10.1"
pwhash = "1"
json = "*"
actix-cors = "0.5.4"

#postgresql
tokio-pg-mapper = "0.1.4"
tokio-pg-mapper-derive = "0.1.4"
deadpool-postgres = "0.5.0"
tokio-postgres = "0.5.1"
