[package]
name = "subscription_manager"
version = "0.1.0"
authors = [ "Francis <francis.patron1@upr.edu>",
            "Victor <victor.laureano@upr.edu>",
            "Juan <juan.velazquez19@upr.edu>",
            "Richard <richard.vazquez2@upr.edu>",
            "Joshua <joshua.corretjer@upr.edu>",
            "Genesis <genesis.borges@upr.edu>"
            ]
edition = "2018"

[dependencies]
actix-web = "3.3.2"
actix-rt = "1.1.1"
serde = { version = "1.0",features = ["derive"]}
dotenv = "0.15.0"
config = "0.10.1"
pwhash = "1"
json = "*"
actix-cors = "0.5.4"
tokio-pg-mapper = "0.1.4"
tokio-pg-mapper-derive = "0.1.4"
deadpool-postgres = "0.5.0"
tokio-postgres = "0.5.1"
